# maya2osg

./: AUTHORS  CMakeLists.txt  HISTORY  README  ROADMAP  VERSION
CMakeModules/: FindOSGHelper.cmake
Visual Studio 2008/maya2010/: maya2osg.sln  maya2osg.vcproj
doc/: README  maya2osg.uml
maya2009/: INSTALL.bat  INSTALL.sh
maya2009/Linux/: Makefile
maya2009/Visual Studio 2008/: maya2osg.vcproj
maya2009/prefs/shelves/: shelf_OSG.mel
maya2009/scripts/: maya2osg_cleanup.mel  maya2osg_export.mel  maya2osg_import.mel  maya2osg_preview.mel
maya2010/: INSTALL.bat  INSTALL.sh
maya2010/Linux/: Makefile
maya2010/Visual Studio 2008/: maya2osg.vcproj
maya2010/prefs/shelves/: shelf_OSG.mel
maya2010/scripts/: maya2osg_export.mel  maya2osg_preview.mel  osgexport.mel
maya2011/: INSTALL.bat  INSTALL.sh
maya2011/Linux/: Makefile
maya2011/Visual Studio 2008/: maya2osg.sln  maya2osg.vcproj  maya2osg.vcxproj  maya2osg.vcxproj.filters
maya2011/Visual Studio 2010/: maya2osg.vcxproj  maya2osg.vcxproj.filters
maya2011/prefs/shelves/: shelf_OSG.mel
maya2011/scripts/: maya2osg_export.mel
misc/: osgviewer.cpp
scripts/: maya2osg_export.mel  maya2osg_exportDialog.mel  maya2osg_preview.mel
src/: Makefile  animation.cpp  animation.h  camera.cpp  camera.h  cameraanimation.cpp  cameraanimation.h  common.cpp  common.h  config.cpp  config.h  dagnode.cpp  dagnode.h  directionallight.cpp  directionallight.h  emitter.cpp  emitter.h  field.cpp  field.h  group.cpp  group.h  importervisitor.cpp  importervisitor.h  lights.cpp  lights.h  maya2osg.cpp  maya2osg.h  mesh.cpp  mesh.h  nparticle.cpp  nparticle.h  osg2maya.cpp  osg2maya.h  osgfiletranslator.cpp  osgfiletranslator.h  osgwrite.cpp  osgwrite.h  particle.cpp  particle.h  pointemitter.cpp  (+18 more)
src/GLSL/: blinn.cpp  blinn.h  bump2d.cpp  bump2d.h  bump2normal.cpp  bump2normal.h  filetexture.cpp  filetexture.h  flatshader.cpp  flatshader.h  glslcbfiletexture.cpp  glslcbfiletexture.h  glslcodeblock.cpp  glslcodeblock.h  glsllighting.cpp  glsllighting.h  glslutils.cpp  glslutils.h  lambert.cpp  lambert.h  phong.cpp  phong.h  shadingnetwork.cpp  shadingnetwork.h  shadingnode.cpp  shadingnode.h  shadingnodefactory.cpp  shadingnodefactory.h  surfaceshader.cpp  surfaceshader.h  texturingconfig.cpp  texturingconfig.h
tests/: README  test1.ma  test_trans.ma
tests/project/: workspace.mel
tests/project/particles/test_particles_startup/: particleShape1.250.pdc
tests/project/scenes/: pumpkin.ma  pumpkin_png.ma  pumpkin_png_rgba.ma  test_glsl_lambert_bump.ma  test_instances.ma  test_lighting.ma  test_lighting_anim.ma  test_negative_scale.ma  test_negative_scale_2.ma  test_particles.ma  test_shading.ma  test_shadows.ma  test_textures.ma  test_trans_anim.ma
tests/project/sourceimages/: pumpkin_pSphereShape1.psd
tests/project/sourceimages/smoke/: Readme.txt  Smoke.0  Smoke.1  Smoke.10  Smoke.11  Smoke.12  Smoke.13  Smoke.14  Smoke.15  Smoke.16  Smoke.17  Smoke.18  Smoke.19  Smoke.2  Smoke.20  Smoke.21  Smoke.22  Smoke.23  Smoke.24  Smoke.25  Smoke.26  Smoke.27  Smoke.28  Smoke.29  Smoke.3  Smoke.30  Smoke.31  Smoke.32  Smoke.33  Smoke.34  Smoke.35  Smoke.36  Smoke.37  Smoke.38  Smoke.39  Smoke.4  Smoke.40  Smoke.41  Smoke.42  Smoke.43  (+15 more)
tests/shaders/: lambert_fragment.glsl  lambert_fragment_notex.glsl  lambert_vertex.glsl  phong_fragment.glsl  pumpkin_v1.rfx  test_ilum_1.rfx
